BlockPalette --- - Рефакторинг